# umoc

./: .gitignore  .gitmodules  CMakeLists.txt  GenerateProject.bat  GenerateProject.command  Readme.md
engine/: CMakeLists.txt
engine/assets/models/sponza/: sponza.gltf
engine/common/: CMakeLists.txt  external.h  hash.h  log.h  serial.h  util.h
engine/platform/: CMakeLists.txt  application.h  context.cpp  context.h  window.cpp  window.h
engine/platform/mac/: window.cpp  window.h
engine/renderer/: base.h
engine/rhi/: context.h  defines.h  image.h  rendertarget.h
engine/rhi/define/: format.h
engine/rhi/resource/: image.h  renderpassInfo.h
engine/shaders/: CMakeLists.txt  bloom.frag  brdf.hlsl  brdflut.frag  common.hlsl  forward.frag  forward.vert  irradiancecube.frag  light.hlsl  lighting.hlsl  pbr.frag  pbr.vert  prefilterenvmap.frag  screen.frag  screen.vert  triangle.frag  triangle.vert
engine/shaders/bloom/: blur.frag  composite.frag  downsample.frag  filter.frag  upsample.frag
engine/shaders/brickwall/: CMakeLists.txt  normal.frag  normal.vert  pbr.frag  pbr.vert  phong.frag  phong.vert
engine/shaders/debug/: grid.frag  grid.frag.spv  grid.vert  grid.vert.spv
engine/shaders/deferred/: geometry.frag  geometry.vert  lighting.frag
engine/shaders/filter/: CMakeLists.txt  dummy.comp  edgedetect.comp  emboss.comp  test.comp
engine/shaders/forward/: forward.frag  forward.vert
engine/shaders/ibl/: pbr.frag  pbr.vert
engine/shaders/ibl/backup/: pbr.frag  pbr.vert
engine/shaders/nbody/: calculate.comp  integrate.comp  particle.frag  particle.vert
engine/shaders/normal/: normal.frag  normal.vert
engine/shaders/particle/: particle.comp  particle.frag  particle.vert
engine/shaders/quad/: triangle.frag  triangle.vert
engine/shaders/screen/: screen.frag  screen.vert  screen1component.frag
engine/shaders/shadowmap/: shadowmap.vert
engine/shaders/skybox/: reflection.frag  reflection.vert  refraction.frag  skybox.frag  skybox.vert
engine/shaders/sponza/: geometry.frag  lighting.frag
engine/shaders/ssao/: blur.frag  geometry.frag  geometry.vert  lighting.frag  ssao.frag
engine/shaders/ssao/backup/: geometry.vert  ssao.frag
engine/shaders/ui/: ui.frag  ui.vert
engine/src/: CMakeLists.txt
engine/src/common/: circular.h  external.h  hash.h  list.h  log.cpp  log.h  memorybuffer.cpp  memorybuffer.h  serial.h  singleton.h  transform.h  tree.h  util.h
engine/src/editor/: CMakeLists.txt  main.cpp
engine/src/model/: CMakeLists.txt  constantBlock.cpp  constantBlock.h  defines.h  instance.cpp  instance.h  loader.cpp  loader.h  material.cpp  material.h  node.cpp  node.h  object.cpp  object.h  vertexInput.cpp  vertexInput.h
engine/src/model/gltf/: loader.cpp  loader.h  material.cpp  material.h
engine/src/model/predefined/: cube.cpp  cube.h  loader.cpp  loader.h  object.cpp  object.h  quad.cpp  quad.h  sphere.cpp  sphere.h  storage.cpp  storage.h
engine/src/platform/: CMakeLists.txt  application.cpp  application.h  asset.h  context.cpp  context.h  defines.h  input.cpp  input.h  timer.h  window.h
engine/src/platform/glfw/: asset.cpp  asset.h  input.cpp  input.h  window.cpp  window.h
engine/src/platform/mac/: window.cpp  window.h
engine/src/renderer/: CMakeLists.txt  base.cpp  base.h  bloom.cpp  bloom.h  brdfLutPass.cpp  brdfLutPass.h  deferred.cpp  deferred.h  forward.cpp  forward.h  irradiancePass.cpp  irradiancePass.h  lighting.h  option.cpp  option.h  preFilterPass.cpp  preFilterPass.h  renderer.h  sceneRenderPass.h  screen.cpp  screen.h  screenPass.cpp  screenPass.h  ssao.cpp  ssao.h  ui.cpp  ui.h
engine/src/renderer/compute/: filter.cpp  filter.h  nbody.cpp  nbody.h  particle.cpp  particle.h
engine/src/renderer/debug/: gridLayerPass.cpp  gridLayerPass.h  gridPass.cpp  gridPass.h
engine/src/renderer/environment/: brdfLutPass.cpp  brdfLutPass.h  irradiancePass.cpp  irradiancePass.h  preFilterPass.cpp  preFilterPass.h
engine/src/renderer/postprocess/: bloom.cpp  bloom.h  screen.cpp  screen.h
engine/src/renderer/sceneRenderer/: deferred.cpp  deferred.h  forward.cpp  forward.h  lighting.cpp  lighting.h  shadowMap.cpp  shadowMap.h  shadowmap.cpp  shadowmap.h  ssao.cpp  ssao.h
engine/src/rhi/: CMakeLists.txt  buffer.cpp  buffer.h  context.cpp  context.h  defines.h  descriptor.cpp  descriptor.h  image.cpp  image.h  rendertarget.cpp  rendertarget.h  resourceMap.cpp  resourceMap.h  resources.h  shader.cpp  shader.h
engine/src/rhi/resource/: pipeline.h  shader.h
engine/src/rhi/resources/: glFormats.h
engine/src/scene/: CMakeLists.txt  light.cpp  light.h  rendertargets.cpp  rendertargets.h  scene.cpp  scene.h  sceneList.h  sceneObject.h  testScene.cpp  testScene.h  textures.cpp  textures.h  tutorialScene.cpp  tutorialScene.h  ui.cpp  ui.h  view.cpp  view.h
engine/src/scene/sceneList/: bloom.cpp  bloom.h  compute.cpp  compute.h  deferred.cpp  deferred.h  ibl.cpp  (+19 more)
engine/src/ui/: component.h
engine/src/vulkan/: CMakeLists.txt  buffer.cpp  buffer.h  commandBuffer.cpp  commandBuffer.h  commandPool.cpp  commandPool.h  context.cpp  context.h  core.h  debug.cpp  debug.h  descriptor.cpp  descriptor.h  device.cpp  device.h  extension.cpp  extension.h  framebuffer.cpp  framebuffer.h  hash.h  image.cpp  image.h  instance.cpp  instance.h  memory.cpp  memory.h  pendingState.cpp  pendingState.h  physicalDevice.cpp  physicalDevice.h  pipeline.cpp  pipeline.h  queue.cpp  queue.h  renderpass.cpp  renderpass.h  rendertarget.cpp  rendertarget.h  resources.h  (+9 more)
engine/test/: CMakeLists.txt
engine/test/common/: descriptor.cpp  hash.cpp  pipeline.cpp
engine/vulkan/: commandBuffer.h  commandPool.cpp  commandPool.h  command_pool.cpp  context.cpp  context.h  core.h  debug.cpp  debug.h  device.cpp  device.h  extension.cpp  extension.h  framebuffer.cpp  framebuffer.h  image.cpp  image.h  instance.cpp  instance.h  memory.cpp  physical_device.cpp  physical_device.h  queue.cpp  queue.h  renderpass.cpp  renderpass.h  resources.h  surface.cpp  surface.h  swapchain.cpp  swapchain.h  sync.cpp  wrapper.cpp  wrapper.h
engine/vulkan/platform/: window.h
(+14 files in other folders)
