CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(yalo)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -arch arm64")

# Vulkan
SET(VULKAN_PATH $ENV{VULKAN_SDK})
IF (APPLE)
    FIND_LIBRARY(VULKAN_LIBRARY NAMES vulkan PATHS ${VULKAN_PATH}/lib)
    FIND_LIBRARY(VULKAN_LAYER NAMES VkLayer_khronos_validation PATHS ${VULKAN_PATH}/lib)
    INCLUDE_DIRECTORIES(${VULKAN_PATH}/include)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_MACOS_MVK -DPLATFORM_MAC")

    message(${VULKAN_PATH})
    IF (VULKAN_LIBRARY)
        message("Found MoltenVK")
    ELSE()
        meesage("Can't find MoltenVK")
    ENDIF()

    if (VULKAN_LAYER)
        message("Found layers")
    endif()
ENDIF()

# GLFW
SET(GLFW_PATH external/glfw)
SET(GLFW_BUILD_DOCS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_TESTS OFF CACHE BOOL "" FORCE)
SET(GLFW_BUILD_EXAMPLES OFF CACHE BOOL "" FORCE)
INCLUDE_DIRECTORIES(${GLFW_PATH}/include)
ADD_SUBDIRECTORY(${GLFW_PATH})

# imgui
SET(IMGUI_PATH external/imgui)
INCLUDE_DIRECTORIES(${IMGUI_PATH})
INCLUDE_DIRECTORIES(${IMGUI_PATH}/backends)
FILE(GLOB IMGUI_SOURCES ${IMGUI_PATH}/*.cpp)
FILE(GLOB IMGUI_SOURCES ${IMGUI_PATH}/*.cpp ${IMGUI_PATH}/backends/imgui_impl_vulkan.cpp)
FILE(GLOB IMGUI_HEADERS ${IMGUI_PATH}/*.h)
ADD_LIBRARY(imgui SHARED ${IMGUI_SOURCES} ${IMGUI_HEADERS})
TARGET_LINK_LIBRARIES(imgui ${VULKAN_LIBRARY})

INCLUDE_DIRECTORIES(engine)
ADD_SUBDIRECTORY(engine)

INCLUDE_DIRECTORIES(editor)
ADD_SUBDIRECTORY(editor)