CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
PROJECT(Umoc)

SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -arch arm64")

SET(DIRECTORIES_TO_INCLUDE ${CMAKE_CURRENT_SOURCE_DIR})

# Vulkan
SET(VULKAN_PATH $ENV{VULKAN_SDK})
IF (APPLE)
    FIND_LIBRARY(VULKAN_LIBRARY NAMES vulkan PATHS ${VULKAN_PATH}/lib)
    FIND_LIBRARY(VULKAN_LAYER NAMES VkLayer_khronos_validation PATHS ${VULKAN_PATH}/lib)
    INCLUDE_DIRECTORIES(${VULKAN_PATH}/include)
    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DVK_USE_PLATFORM_MACOS_MVK -DPLATFORM_MAC")

    message(${VULKAN_PATH})
    IF (VULKAN_LIBRARY)
        message("Found MoltenVK")
    ELSE()
        meesage("Can't find MoltenVK")
    ENDIF()

    if (VULKAN_LAYER)
        message("Found layers")
    endif()
ENDIF()

ADD_SUBDIRECTORY(engine)
INCLUDE_DIRECTORIES(${DIRECTORIES_TO_INCLUDE})

ADD_SUBDIRECTORY(editor)