SET(SOURCES ${SOURCES})
SET(HEADERS ${HEADERS})

SET(SUBDIRECTORIES
    common
    platform
    model
    renderer
    rhi
    vulkan
)

FOREACH(DIRECTORY ${SUBDIRECTORIES})
    ADD_SUBDIRECTORY(${DIRECTORY})
ENDFOREACH()

SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "sources" FILES ${SOURCES} ${HEADERS})

ADD_LIBRARY(
    umoc
    SHARED
    ${SOURCES} ${HEADERS}
)

ADD_DEPENDENCIES(umoc glfw)

TARGET_LINK_LIBRARIES(
    umoc
    ${THIRD_PARTY_LIBS}
    ${VULKAN_LIBRARY}
    ${VULKAN_LAYER}
)