FILE(GLOB ADDITIONAL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp)
FILE(GLOB ADDITIONAL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/*.h)
SET(SOURCES ${SOURCES} ${ADDITIONAL_SOURCES})
SET(HEADERS ${HEADERS} ${ADDITIONAL_HEADERS})

SET(SUBDIRECTORIES 
    common
)

FOREACH(DIRECTORY ${SUBDIRECTORIES})
    FILE(GLOB ADDITIONAL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/${DIRECTORY}/*.cpp)
    FILE(GLOB ADDITIONAL_HEADERS ${CMAKE_CURRENT_SOURCE_DIR}/${DIRECTORY}/*.h)
    SET(SOURCES ${SOURCES} ${ADDITIONAL_SOURCES})
    SET(HEADERS ${HEADERS} ${ADDITIONAL_HEADERS})
ENDFOREACH()

SOURCE_GROUP(TREE ${CMAKE_CURRENT_SOURCE_DIR} PREFIX "test" FILES ${SOURCES} ${HEADERS})

ADD_EXECUTABLE(
  umocTest
  ${SOURCES} ${HEADERS}
)

TARGET_LINK_LIBRARIES(
  umocTest
  GTest::gtest_main
  umoc
  ${THIRD_PARTY_LIBS}
  ${VULKAN_LIBRARY}
  # ${VULKAN_LAYER}
)

include(GoogleTest)
gtest_discover_tests(umocTest)